testsuite/synth/issue1428/bit01.ref
bit01.vhdl:10:10:error: multiple assignments for "s" offsets 0:0
